<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">537799596287860</string>
    <string name="app_name">TrioTicTacToe</string>
    <string name="just_a_second">Just a second..</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_game_level">Difficulty Level</string>
	<string name="select_first_move">First Move</string>
 
   	<string name="count"> 3</string>
    <string name="user_time">Time : 0 secs</string>
    <string name="next_turn">Next turn :</string>
    <string name="next_turn_you">Next turn : you</string>
    <string name="next_turn_comp">Next turn : computer</string>
     <string name="x_player">X [you] - 3</string>
    <string name="o_player">O [comp] - 2</string>
    <string name="hints">Hints</string>
 
    
    <string-array name="levels_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Expert</item>
    </string-array>
    <string-array name="XO">
        <item>X</item>
        <item>O</item>
    </string-array>
    <string name="back">&lt; Back</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save_current_game">Do you wish to save the current game before exiting?</string>
    <string name="continue_saved_game">Do you wish to continue your last saved game?</string>

    <string name="share_fb">Share on Facebook</string>
    <string name="help">Help</string>
    <string name="restart">Restart</string>
    <string name="settings">Settings</string>
    <string name="exit_game">Exit Game</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
</resources>