<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/game_general_padding"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/app_player_1"
        android:layout_width="@dimen/x_width"
        android:layout_height="@dimen/x_height"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/hints"
        android:src="@drawable/x"
        android:text="@string/x_player" />

    <TextView
        android:id="@+id/app_player_1_text"
        style="@style/game_text"
        android:layout_width="@dimen/x_width"
        android:layout_height="@dimen/x_height"
        android:layout_alignBottom="@+id/app_player_1"
        android:layout_alignTop="@+id/app_player_1"
        android:layout_marginTop="@dimen/x_top_margin"
        android:layout_toRightOf="@id/app_player_1"
        android:text="@string/count"
        android:textSize="@dimen/x_font_size" />

    <ImageView
        android:id="@+id/app_player_2"
        android:layout_width="@dimen/x_width"
        android:layout_height="@dimen/x_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/app_player_1"
        android:contentDescription="@string/hints"
        android:src="@drawable/o"
        android:text="@string/o_player" />

    <TextView
        android:id="@+id/app_player_2_text"
        style="@style/game_text"
        android:layout_width="@dimen/x_width"
        android:layout_height="@dimen/x_width"
        android:layout_alignBottom="@+id/app_player_2"
        android:layout_alignTop="@+id/app_player_2"
        android:layout_marginTop="@dimen/x_top_margin"
        android:layout_toRightOf="@id/app_player_2"
        android:text="@string/count"
        android:textSize="@dimen/x_font_size" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/hint_width"
        android:layout_height="@dimen/hint_height"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:contentDescription="@string/hints"
        android:src="@drawable/light_bulb" />

</RelativeLayout>